--- a/tutorials/nuplan_advanced_model_training.ipynb
+++ b/tutorials/nuplan_advanced_model_training.ipynb
@@ -379,9 +379,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ""
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -393,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
