--- a/tutorials/nuplan_scenario_visualization.ipynb
+++ b/tutorials/nuplan_scenario_visualization.ipynb
@@ -82,9 +82,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ""
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -96,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
