--- a/tutorials/nuplan_planner_tutorial.ipynb
+++ b/tutorials/nuplan_planner_tutorial.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "63ae56b0",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -14,7 +13,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e01e5d2",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -31,7 +29,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34460db1",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -43,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01b6b6ee",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -55,7 +51,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0189156",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -70,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13c00121",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -88,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779b0132",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -106,7 +99,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf9156f",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -118,7 +110,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b21f4f69",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -134,7 +125,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42ff5db7",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -158,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f1b203",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -261,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1945b81c",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -277,7 +265,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "128b0d15",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -289,7 +276,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10f14dbe",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -315,7 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5770200",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -327,7 +312,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22682633",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -346,7 +330,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a51f0c",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -366,7 +349,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db337ceb",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -379,7 +361,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11b08c6d",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -428,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e686df8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +417,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88231b74",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -450,7 +429,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "161cc166",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -472,7 +450,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c53b9c2e",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -484,7 +461,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7514e91c",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -520,7 +496,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c546ba9d",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -533,7 +508,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24732d42",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -560,7 +534,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67acc351",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -573,7 +546,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1a59ee2",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -593,9 +565,9 @@
    "hash": "5aea00fa936a67f14323fa2d54163d7dc1f328c617e433b03a680f73ee2dd426"
   },
   "kernelspec": {
-   "display_name": "",
+   "display_name": "Python 3",
    "language": "python",
-   "name": ""
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -607,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
