--- a/tutorials/nuplan_advanced_model_training.ipynb
+++ b/tutorials/nuplan_advanced_model_training.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ad04e428",
    "metadata": {},
    "source": [
     "![](https://www.nuplan.org/static/media/nuPlan_final.3fde7586.png)"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18ab8c9a",
    "metadata": {},
    "source": [
     "# NuPlan Advanced Model Training Tutorial\n",
@@ -29,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1f4a410",
    "metadata": {},
    "source": [
     "# NuPlan Training Pipeline Architecture<a name=\"architecture\"></a>\n",
@@ -51,7 +48,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d57986",
    "metadata": {},
    "source": [
     "# Accessing NuPlan Data<a name=\"data_access\"></a>\n",
@@ -64,8 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81312924",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +73,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1a18271",
    "metadata": {},
    "source": [
     "## Database Schema\n",
@@ -97,7 +91,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3bc4937",
    "metadata": {},
    "source": [
     "### ORM Database API\n",
@@ -106,10 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "350598f8",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nuplan'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-980b5ecf2117>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnuplan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatabase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnuplan_db_orm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnuplandb_wrapper\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNuPlanDBWrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m nuplandb_wrapper = NuPlanDBWrapper(\n\u001b[1;32m      4\u001b[0m     \u001b[0mdata_root\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNUPLAN_DATA_ROOT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mmap_root\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNUPLAN_MAPS_ROOT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nuplan'"
+     ]
+    }
+   ],
    "source": [
     "from nuplan.database.nuplan_db_orm.nuplandb_wrapper import NuPlanDBWrapper\n",
     "\n",
@@ -123,7 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d967b953",
    "metadata": {},
    "source": [
     "This wrapper serves as an abstraction over the list of `log_dbs` that are present on the machine. A log_db can be extracted from the wrapper."
@@ -132,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8719bb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a9c3929",
    "metadata": {},
    "source": [
     "This return a [`NuplanDB`](https://github.com/motional/nuplan-devkit/blob/master/nuplan/database/nuplan_db_orm/nuplandb.py) object, which can then be queried."
@@ -151,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf68e643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2ab1419",
    "metadata": {},
    "source": [
     "Foriegn Key links appear as property members for the returned model objects. These are fetched lazily on demand from the database. For example, to retrieve the state of the ego vehicle corresponding to the beginning of the scenario, one can write:"
@@ -170,7 +169,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c4b4cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +180,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b54cb7bd",
    "metadata": {},
    "source": [
     "This method is convenient, but can be very slow if large amounts of data are pulled from the database. In this case, it is recommended to use the SQLAlchemy query builder. For example, consider the task of finding the first 10 lidar_pc tokens with a timestamp greater than 1620857890400393. Looping over the `lidar_pc` table is inefficient compared to using the query builder, like below:"
@@ -191,7 +188,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d66e0fd8",
    "metadata": {
     "scrolled": false
    },
@@ -210,7 +206,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aed4b3c7",
    "metadata": {},
    "source": [
     "Two more performance notes about the SqlAlchemy backend:\n",
@@ -220,7 +215,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab03e76",
    "metadata": {},
    "source": [
     "### Direct SQL API\n",
@@ -232,7 +226,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a4e3873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +242,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ce166b",
    "metadata": {},
    "source": [
     "All functionality exposed within SQLite can be used when writing these queries. Queries can be parameterized with the second argument to the API calls. For example, here's an example of getting the ego pose corresponding to a particular lidar_pc token:"
@@ -258,7 +250,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d568cb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +277,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8280d649",
    "metadata": {},
    "source": [
     "A few notes about using the direct SQL API:\n",
@@ -297,7 +287,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d3d0b58",
    "metadata": {},
    "source": [
     "# Writing Custom Preprocessing Steps<a name=\"custom_preprocessing\"></a>\n",
@@ -312,7 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7382879d",
    "metadata": {},
    "source": [
     "# Writing Custom Models<a name=\"custom_models\"></a>\n",
@@ -323,7 +311,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c92d34",
    "metadata": {},
    "source": [
     "# Writing Custom Loss Functions and Training Metrics<a name=\"custom_loss\"></a>\n",
@@ -332,7 +319,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "265cdf0f",
    "metadata": {},
    "source": [
     "# Configuring the Training Pipeline<a name=\"configuring\"></a>\n",
@@ -345,7 +331,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "172a3f45",
    "metadata": {},
    "source": [
     "# Running Training<a name=\"run_training\"></a>"
@@ -353,7 +338,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bcdc998",
    "metadata": {},
    "source": [
     "Once all of the classes above have been implemented and the configuration files created, training is as simple as running this command from an activated `nuenv` conda environment:\n",
@@ -379,9 +363,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
+   "display_name": "Python 3",
    "language": "python",
-   "name": ""
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -393,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
