--- a/tutorials/nuplan_framework.ipynb
+++ b/tutorials/nuplan_framework.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fcb4d62d",
    "metadata": {},
    "source": [
     "![](https://www.nuplan.org/static/media/nuPlan_final.3fde7586.png)"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d454a26",
    "metadata": {},
    "source": [
     "### Contents\n",
@@ -23,7 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3422a43",
    "metadata": {},
    "source": [
     "# Introduction to nuPlan <a name=\"introduction\"></a>\n"
@@ -31,7 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b27eb25",
    "metadata": {},
    "source": [
     "Welcome to nuPlan! This notebook will explore the nuPlan simulation framework, training platform as well as the nuBoard metrics/scenarios visualization dashboard."
@@ -39,7 +35,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afead152",
    "metadata": {},
    "source": [
     "## What is nuPlan\n",
@@ -53,7 +48,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ece3a3",
    "metadata": {},
    "source": [
     "## Training & simulation framework\n",
@@ -72,7 +66,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1d23188",
    "metadata": {},
    "source": [
     "## Scenarios in nuPlan\n",
@@ -99,7 +92,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "652ebd82",
    "metadata": {},
    "source": [
     "## Database\n",
@@ -114,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2064bbc1",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -125,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dcf36e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12e18a2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +141,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "288d8db0",
    "metadata": {},
    "source": [
     "# Training an ML planner <a name=\"training\"></a>"
@@ -160,7 +148,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d80acc",
    "metadata": {},
    "source": [
     "## Imitation learning\n",
@@ -185,7 +172,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0800a03",
    "metadata": {},
    "source": [
     "## Training parameters"
@@ -193,7 +179,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "602e5324",
    "metadata": {},
    "source": [
     "The following parameter categories define the training protocol which includes the model, metrics, objectives etc.\n",
@@ -238,7 +223,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee66b84",
    "metadata": {},
    "source": [
     "## Prepare the training config"
@@ -247,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05860753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +267,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "162273a1",
    "metadata": {},
    "source": [
     "## Launch tensorboard for visualizing training artifacts"
@@ -293,7 +275,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5acfc262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +284,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff5edf94",
    "metadata": {},
    "source": [
     "## Launch training (within the notebook)"
@@ -312,7 +292,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62fb9600",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +303,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd570621",
    "metadata": {},
    "source": [
     "## Launch training (command line - alternative)"
@@ -332,7 +310,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6ad67e5",
    "metadata": {},
    "source": [
     "A training experiment with the above same parameters can be launched alternatively with:\n",
@@ -351,7 +328,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "184dc002",
    "metadata": {},
    "source": [
     "# Simulating a planner <a name=\"simulation\"></a>"
@@ -359,7 +335,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49758620",
    "metadata": {},
    "source": [
     "## Open-loop simulation\n",
@@ -386,7 +361,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04359006",
    "metadata": {},
    "source": [
     "## Simulation parameters"
@@ -394,7 +368,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebef8382",
    "metadata": {},
    "source": [
     "### Planners\n",
@@ -409,7 +382,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db903632",
    "metadata": {},
    "source": [
     "## Prepare the simulation config"
@@ -418,7 +390,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112d1965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +426,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e79a0a",
    "metadata": {},
    "source": [
     "## Launch simulation (within the notebook)"
@@ -464,7 +434,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba7aab5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +448,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b6c1fb9",
    "metadata": {},
    "source": [
     "## Launch simulation (command line - alternative)"
@@ -487,7 +455,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9b23af",
    "metadata": {},
    "source": [
     "A simulation experiment can be launched alternatively with:\n",
@@ -504,7 +471,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "557a181f",
    "metadata": {},
    "source": [
     "## Simulate a trained ML planner for comparison\n",
@@ -517,7 +483,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba4dc68c",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -564,7 +529,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae7a31f9",
    "metadata": {},
    "source": [
     "# Visualizing metrics and scenarios <a name=\"dashboard\"></a>"
@@ -572,7 +536,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa24ae5b",
    "metadata": {},
    "source": [
     "## nuBoard summary\n",
@@ -604,7 +567,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8edb17",
    "metadata": {},
    "source": [
     "## Prepare the nuBoard config"
@@ -613,7 +575,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42434f46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +595,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3420d0c5",
    "metadata": {},
    "source": [
     "## Launch nuBoard (open in new tab - recommended)"
@@ -643,7 +603,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f114e9bf",
    "metadata": {
     "scrolled": false
    },
@@ -657,7 +616,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "177cd444",
    "metadata": {},
    "source": [
     "## Launch nuBoard (embedded within the notebook - alternative)"
@@ -666,7 +624,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd4b6454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +641,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4624979a",
    "metadata": {},
    "source": [
     "## Launch nuBoard (command line - alternative)"
@@ -692,7 +648,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "557156ac",
    "metadata": {},
    "source": [
     "nuBoard can be launched alternatively with:\n",
@@ -709,9 +664,9 @@
    "hash": "5aea00fa936a67f14323fa2d54163d7dc1f328c617e433b03a680f73ee2dd426"
   },
   "kernelspec": {
-   "display_name": "",
+   "display_name": "Python 3",
    "language": "python",
-   "name": ""
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -723,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
